fix: avoid squishing social media icons with space-around

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -655,10 +655,7 @@ ul.leafylist li li:first-child {
     }
     .social-media {
       display: flex;
-      justify-content: center;
-    }
-    .social-media-link {
-      margin-left: 15%;
+      justify-content: space-around;
     }
   }
 
